// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.lqeo1nz,html.lqeo1nz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1dpuatu0 vhiapm18 vhiapm1b">
+        <div class="_72whvq0 lqeo1n7i lqeo1n6e lqeo1n9q lqeo1n8m lqeo1n5e vhiapm18 vhiapm1b lqeo1n32 lqeo1n35">
+          <span class="_72whvq0 lqeo1n4y vhiapm0 vhiapm1 vhiapm21 m3vcy34 vhiapmd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._72whvq0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._72whvq0 {
  outline: none;
}
._72whvq1 {
  display: block;
}
._72whvq2 {
  line-height: 1;
}
._72whvq3 {
  list-style: none;
}
._72whvq4 {
  quotes: none;
}
._72whvq4:after,
._72whvq4:before {
  content: "";
}
._72whvq5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._72whvq6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
._72whvq7 {
  background-color: transparent;
}
._72whvq9 {
  color: inherit;
}
._72whvqa:disabled {
  opacity: 1;
}
._72whvqa::-ms-expand {
  display: none;
}
._72whvqc[type="number"] {
  -moz-appearance: textfield;
}
._72whvqc[type="number"]::-webkit-inner-spin-button,
._72whvqc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._72whvqc::-ms-clear {
  display: none;
}
._72whvqc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._72whvqf {
  color: inherit;
  text-decoration: none;
}
.lqeo1n0 {
  overflow: hidden;
}
.lqeo1n1 {
  overflow: scroll;
}
.lqeo1n2 {
  overflow: visible;
}
.lqeo1n3 {
  overflow: auto;
}
.lqeo1n4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.lqeo1n5 {
  outline: none;
}
.lqeo1n6 {
  opacity: 0;
}
.lqeo1n7 {
  z-index: 0;
}
.lqeo1n8 {
  z-index: 1;
}
.lqeo1n9 {
  z-index: 2;
}
.lqeo1na {
  z-index: 90;
}
.lqeo1nb {
  z-index: 100;
}
.lqeo1nc {
  z-index: 200;
}
.lqeo1nd {
  z-index: 290;
}
.lqeo1ne {
  z-index: 300;
}
.lqeo1nf {
  z-index: 400;
}
.lqeo1ng {
  cursor: default;
}
.lqeo1nh {
  cursor: pointer;
}
.lqeo1ni {
  pointer-events: none;
}
.lqeo1nj {
  top: 0;
}
.lqeo1nk {
  bottom: 0;
}
.lqeo1nl {
  left: 0;
}
.lqeo1nm {
  right: 0;
}
.lqeo1nn {
  height: 100%;
}
.lqeo1no {
  height: var(--lqh9639);
}
.lqeo1np {
  width: 100%;
}
.lqeo1nq {
  width: var(--lqh9639);
}
.lqeo1nr {
  min-width: 0;
}
.lqeo1ns {
  max-width: var(--lqh96311);
}
.lqeo1nt {
  max-width: var(--lqh96312);
}
.lqeo1nu {
  max-width: var(--lqh96313);
}
.lqeo1nv {
  max-width: var(--lqh96314);
}
.lqeo1nw {
  transition: var(--lqh9635i);
}
.lqeo1nx {
  transition: var(--lqh9635j);
}
.lqeo1ny:active {
  transform: var(--lqh9635k);
}
html.lqeo1nz .lqeo1n11,
html:not(.lqeo1nz) .lqeo1n10 {
  background: var(--lqh9631t);
}
html.lqeo1nz .lqeo1n13,
html:not(.lqeo1nz) .lqeo1n12 {
  background: var(--lqh9631u);
}
html.lqeo1nz .lqeo1n15,
html:not(.lqeo1nz) .lqeo1n14 {
  background: var(--lqh9631v);
}
html.lqeo1nz .lqeo1n17,
html:not(.lqeo1nz) .lqeo1n16 {
  background: var(--lqh9631w);
}
html.lqeo1nz .lqeo1n19,
html:not(.lqeo1nz) .lqeo1n18 {
  background: var(--lqh9631x);
}
html.lqeo1nz .lqeo1n1b,
html:not(.lqeo1nz) .lqeo1n1a {
  background: var(--lqh9631y);
}
html.lqeo1nz .lqeo1n1d,
html:not(.lqeo1nz) .lqeo1n1c {
  background: var(--lqh9631z);
}
html.lqeo1nz .lqeo1n1f,
html:not(.lqeo1nz) .lqeo1n1e {
  background: var(--lqh96320);
}
html.lqeo1nz .lqeo1n1h,
html:not(.lqeo1nz) .lqeo1n1g {
  background: var(--lqh96321);
}
html.lqeo1nz .lqeo1n1j,
html:not(.lqeo1nz) .lqeo1n1i {
  background: var(--lqh96322);
}
html.lqeo1nz .lqeo1n1l,
html:not(.lqeo1nz) .lqeo1n1k {
  background: var(--lqh96323);
}
html.lqeo1nz .lqeo1n1n,
html:not(.lqeo1nz) .lqeo1n1m {
  background: var(--lqh96324);
}
html.lqeo1nz .lqeo1n1p,
html:not(.lqeo1nz) .lqeo1n1o {
  background: var(--lqh96325);
}
html.lqeo1nz .lqeo1n1r,
html:not(.lqeo1nz) .lqeo1n1q {
  background: var(--lqh96326);
}
html.lqeo1nz .lqeo1n1t,
html:not(.lqeo1nz) .lqeo1n1s {
  background: var(--lqh96327);
}
html.lqeo1nz .lqeo1n1v,
html:not(.lqeo1nz) .lqeo1n1u {
  background: var(--lqh96328);
}
html.lqeo1nz .lqeo1n1x,
html:not(.lqeo1nz) .lqeo1n1w {
  background: var(--lqh96329);
}
html.lqeo1nz .lqeo1n1z,
html:not(.lqeo1nz) .lqeo1n1y {
  background: var(--lqh9632a);
}
html.lqeo1nz .lqeo1n21,
html:not(.lqeo1nz) .lqeo1n20 {
  background: var(--lqh9632b);
}
html.lqeo1nz .lqeo1n23,
html:not(.lqeo1nz) .lqeo1n22 {
  background: var(--lqh9632c);
}
html.lqeo1nz .lqeo1n25,
html:not(.lqeo1nz) .lqeo1n24 {
  background: var(--lqh9632d);
}
html.lqeo1nz .lqeo1n27,
html:not(.lqeo1nz) .lqeo1n26 {
  background: var(--lqh9632e);
}
html.lqeo1nz .lqeo1n29,
html:not(.lqeo1nz) .lqeo1n28 {
  background: var(--lqh9632f);
}
html.lqeo1nz .lqeo1n2b,
html:not(.lqeo1nz) .lqeo1n2a {
  background: var(--lqh9632g);
}
html.lqeo1nz .lqeo1n2d,
html:not(.lqeo1nz) .lqeo1n2c {
  background: var(--lqh9632h);
}
html.lqeo1nz .lqeo1n2f,
html:not(.lqeo1nz) .lqeo1n2e {
  background: var(--lqh9632i);
}
html.lqeo1nz .lqeo1n2h,
html:not(.lqeo1nz) .lqeo1n2g {
  background: var(--lqh9632j);
}
html.lqeo1nz .lqeo1n2j,
html:not(.lqeo1nz) .lqeo1n2i {
  background: var(--lqh9632k);
}
html.lqeo1nz .lqeo1n2l,
html:not(.lqeo1nz) .lqeo1n2k {
  background: var(--lqh9632l);
}
html.lqeo1nz .lqeo1n2n,
html:not(.lqeo1nz) .lqeo1n2m {
  background: var(--lqh9632m);
}
html.lqeo1nz .lqeo1n2p,
html:not(.lqeo1nz) .lqeo1n2o {
  background: var(--lqh9632n);
}
html.lqeo1nz .lqeo1n2r,
html:not(.lqeo1nz) .lqeo1n2q {
  background: var(--lqh9632o);
}
html.lqeo1nz .lqeo1n2t,
html:not(.lqeo1nz) .lqeo1n2s {
  background: var(--lqh9632p);
}
html.lqeo1nz .lqeo1n2v,
html:not(.lqeo1nz) .lqeo1n2u {
  background: var(--lqh9632q);
}
html.lqeo1nz .lqeo1n2x,
html:not(.lqeo1nz) .lqeo1n2w {
  background: var(--lqh9632r);
}
html.lqeo1nz .lqeo1n2z,
html:not(.lqeo1nz) .lqeo1n2y {
  background: var(--lqh9632s);
}
html.lqeo1nz .lqeo1n31,
html:not(.lqeo1nz) .lqeo1n30 {
  background: var(--lqh9632t);
}
html.lqeo1nz .lqeo1n33,
html:not(.lqeo1nz) .lqeo1n32 {
  background: var(--lqh9632u);
}
html.lqeo1nz .lqeo1n35,
html:not(.lqeo1nz) .lqeo1n34 {
  background: var(--lqh9632v);
}
html.lqeo1nz .lqeo1n37,
html:not(.lqeo1nz) .lqeo1n36 {
  box-shadow: var(--lqh9635l);
}
html.lqeo1nz .lqeo1n39,
html:not(.lqeo1nz) .lqeo1n38 {
  box-shadow: var(--lqh9635m);
}
html.lqeo1nz .lqeo1n3b,
html:not(.lqeo1nz) .lqeo1n3a {
  box-shadow: var(--lqh9635n);
}
html.lqeo1nz .lqeo1n3d,
html:not(.lqeo1nz) .lqeo1n3c {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963f);
}
html.lqeo1nz .lqeo1n3f,
html:not(.lqeo1nz) .lqeo1n3e {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963g);
}
html.lqeo1nz .lqeo1n3h,
html:not(.lqeo1nz) .lqeo1n3g {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963f);
}
html.lqeo1nz .lqeo1n3j,
html:not(.lqeo1nz) .lqeo1n3i {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963g);
}
html.lqeo1nz .lqeo1n3l,
html:not(.lqeo1nz) .lqeo1n3k {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963h);
}
html.lqeo1nz .lqeo1n3n,
html:not(.lqeo1nz) .lqeo1n3m {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963i);
}
html.lqeo1nz .lqeo1n3p,
html:not(.lqeo1nz) .lqeo1n3o {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963j);
}
html.lqeo1nz .lqeo1n3r,
html:not(.lqeo1nz) .lqeo1n3q {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963j);
}
html.lqeo1nz .lqeo1n3t,
html:not(.lqeo1nz) .lqeo1n3s {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963k);
}
html.lqeo1nz .lqeo1n3v,
html:not(.lqeo1nz) .lqeo1n3u {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963k);
}
html.lqeo1nz .lqeo1n3x,
html:not(.lqeo1nz) .lqeo1n3w {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963l);
}
html.lqeo1nz .lqeo1n3z,
html:not(.lqeo1nz) .lqeo1n3y {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963n);
}
html.lqeo1nz .lqeo1n41,
html:not(.lqeo1nz) .lqeo1n40 {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963n);
}
html.lqeo1nz .lqeo1n43,
html:not(.lqeo1nz) .lqeo1n42 {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963o);
}
html.lqeo1nz .lqeo1n45,
html:not(.lqeo1nz) .lqeo1n44 {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963o);
}
html.lqeo1nz .lqeo1n47,
html:not(.lqeo1nz) .lqeo1n46 {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963p);
}
html.lqeo1nz .lqeo1n49,
html:not(.lqeo1nz) .lqeo1n48 {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963q);
}
html.lqeo1nz .lqeo1n4b,
html:not(.lqeo1nz) .lqeo1n4a {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963r);
}
html.lqeo1nz .lqeo1n4d,
html:not(.lqeo1nz) .lqeo1n4c {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963r);
}
html.lqeo1nz .lqeo1n4f,
html:not(.lqeo1nz) .lqeo1n4e {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963s);
}
html.lqeo1nz .lqeo1n4h,
html:not(.lqeo1nz) .lqeo1n4g {
  box-shadow: inset 0 0 0 var(--lqh963z) var(--lqh963s);
}
html.lqeo1nz .lqeo1n4j,
html:not(.lqeo1nz) .lqeo1n4i {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963t);
}
html.lqeo1nz .lqeo1n4l,
html:not(.lqeo1nz) .lqeo1n4k {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963u);
}
html.lqeo1nz .lqeo1n4n,
html:not(.lqeo1nz) .lqeo1n4m {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963v);
}
html.lqeo1nz .lqeo1n4p,
html:not(.lqeo1nz) .lqeo1n4o {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963w);
}
html.lqeo1nz .lqeo1n4r,
html:not(.lqeo1nz) .lqeo1n4q {
  box-shadow: inset 0 0 0 var(--lqh963y) var(--lqh963x);
}
html.lqeo1nz .lqeo1n4t,
html:not(.lqeo1nz) .lqeo1n4s {
  box-shadow: 0 0 0 var(--lqh96310) var(--lqh963m);
}
.lqeo1n4u {
  display: none;
}
.lqeo1n4y {
  display: block;
}
.lqeo1n52 {
  display: inline;
}
.lqeo1n56 {
  display: inline-block;
}
.lqeo1n5a {
  display: flex;
}
.lqeo1n5e {
  position: relative;
}
.lqeo1n5i {
  position: absolute;
}
.lqeo1n5m {
  position: fixed;
}
.lqeo1n5q {
  border-radius: 0;
}
.lqeo1n5u {
  border-radius: 9999px;
}
.lqeo1n5y {
  border-radius: var(--lqh963b);
}
.lqeo1n62 {
  border-radius: var(--lqh963c);
}
.lqeo1n66 {
  border-radius: var(--lqh963d);
}
.lqeo1n6a {
  border-radius: var(--lqh963e);
}
.lqeo1n6e {
  padding-top: var(--lqh9630);
}
.lqeo1n6i {
  padding-top: var(--lqh9631);
}
.lqeo1n6m {
  padding-top: var(--lqh9632);
}
.lqeo1n6q {
  padding-top: var(--lqh9633);
}
.lqeo1n6u {
  padding-top: var(--lqh9634);
}
.lqeo1n6y {
  padding-top: var(--lqh9635);
}
.lqeo1n72 {
  padding-top: var(--lqh9636);
}
.lqeo1n76 {
  padding-top: var(--lqh9637);
}
.lqeo1n7a {
  padding-top: var(--lqh9638);
}
.lqeo1n7e {
  padding-top: 0;
}
.lqeo1n7i {
  padding-bottom: var(--lqh9630);
}
.lqeo1n7m {
  padding-bottom: var(--lqh9631);
}
.lqeo1n7q {
  padding-bottom: var(--lqh9632);
}
.lqeo1n7u {
  padding-bottom: var(--lqh9633);
}
.lqeo1n7y {
  padding-bottom: var(--lqh9634);
}
.lqeo1n82 {
  padding-bottom: var(--lqh9635);
}
.lqeo1n86 {
  padding-bottom: var(--lqh9636);
}
.lqeo1n8a {
  padding-bottom: var(--lqh9637);
}
.lqeo1n8e {
  padding-bottom: var(--lqh9638);
}
.lqeo1n8i {
  padding-bottom: 0;
}
.lqeo1n8m {
  padding-right: var(--lqh9630);
}
.lqeo1n8q {
  padding-right: var(--lqh9631);
}
.lqeo1n8u {
  padding-right: var(--lqh9632);
}
.lqeo1n8y {
  padding-right: var(--lqh9633);
}
.lqeo1n92 {
  padding-right: var(--lqh9634);
}
.lqeo1n96 {
  padding-right: var(--lqh9635);
}
.lqeo1n9a {
  padding-right: var(--lqh9636);
}
.lqeo1n9e {
  padding-right: var(--lqh9637);
}
.lqeo1n9i {
  padding-right: var(--lqh9638);
}
.lqeo1n9m {
  padding-right: 0;
}
.lqeo1n9q {
  padding-left: var(--lqh9630);
}
.lqeo1n9u {
  padding-left: var(--lqh9631);
}
.lqeo1n9y {
  padding-left: var(--lqh9632);
}
.lqeo1na2 {
  padding-left: var(--lqh9633);
}
.lqeo1na6 {
  padding-left: var(--lqh9634);
}
.lqeo1naa {
  padding-left: var(--lqh9635);
}
.lqeo1nae {
  padding-left: var(--lqh9636);
}
.lqeo1nai {
  padding-left: var(--lqh9637);
}
.lqeo1nam {
  padding-left: var(--lqh9638);
}
.lqeo1naq {
  padding-left: 0;
}
.lqeo1nau {
  margin-top: var(--lqh9630);
}
.lqeo1nay {
  margin-top: var(--lqh9631);
}
.lqeo1nb2 {
  margin-top: var(--lqh9632);
}
.lqeo1nb6 {
  margin-top: var(--lqh9633);
}
.lqeo1nba {
  margin-top: var(--lqh9634);
}
.lqeo1nbe {
  margin-top: var(--lqh9635);
}
.lqeo1nbi {
  margin-top: var(--lqh9636);
}
.lqeo1nbm {
  margin-top: var(--lqh9637);
}
.lqeo1nbq {
  margin-top: var(--lqh9638);
}
.lqeo1nbu {
  margin-top: 0;
}
.lqeo1nby {
  margin-bottom: var(--lqh9630);
}
.lqeo1nc2 {
  margin-bottom: var(--lqh9631);
}
.lqeo1nc6 {
  margin-bottom: var(--lqh9632);
}
.lqeo1nca {
  margin-bottom: var(--lqh9633);
}
.lqeo1nce {
  margin-bottom: var(--lqh9634);
}
.lqeo1nci {
  margin-bottom: var(--lqh9635);
}
.lqeo1ncm {
  margin-bottom: var(--lqh9636);
}
.lqeo1ncq {
  margin-bottom: var(--lqh9637);
}
.lqeo1ncu {
  margin-bottom: var(--lqh9638);
}
.lqeo1ncy {
  margin-bottom: 0;
}
.lqeo1nd2 {
  margin-right: var(--lqh9630);
}
.lqeo1nd6 {
  margin-right: var(--lqh9631);
}
.lqeo1nda {
  margin-right: var(--lqh9632);
}
.lqeo1nde {
  margin-right: var(--lqh9633);
}
.lqeo1ndi {
  margin-right: var(--lqh9634);
}
.lqeo1ndm {
  margin-right: var(--lqh9635);
}
.lqeo1ndq {
  margin-right: var(--lqh9636);
}
.lqeo1ndu {
  margin-right: var(--lqh9637);
}
.lqeo1ndy {
  margin-right: var(--lqh9638);
}
.lqeo1ne2 {
  margin-right: 0;
}
.lqeo1ne6 {
  margin-left: var(--lqh9630);
}
.lqeo1nea {
  margin-left: var(--lqh9631);
}
.lqeo1nee {
  margin-left: var(--lqh9632);
}
.lqeo1nei {
  margin-left: var(--lqh9633);
}
.lqeo1nem {
  margin-left: var(--lqh9634);
}
.lqeo1neq {
  margin-left: var(--lqh9635);
}
.lqeo1neu {
  margin-left: var(--lqh9636);
}
.lqeo1ney {
  margin-left: var(--lqh9637);
}
.lqeo1nf2 {
  margin-left: var(--lqh9638);
}
.lqeo1nf6 {
  margin-left: 0;
}
.lqeo1nfa {
  align-items: flex-start;
}
.lqeo1nfe {
  align-items: center;
}
.lqeo1nfi {
  align-items: flex-end;
}
.lqeo1nfm {
  justify-content: flex-start;
}
.lqeo1nfq {
  justify-content: center;
}
.lqeo1nfu {
  justify-content: flex-end;
}
.lqeo1nfy {
  justify-content: space-between;
}
.lqeo1ng2 {
  flex-direction: row;
}
.lqeo1ng6 {
  flex-direction: row-reverse;
}
.lqeo1nga {
  flex-direction: column;
}
.lqeo1nge {
  flex-direction: column-reverse;
}
.lqeo1ngi {
  flex-wrap: wrap;
}
.lqeo1ngm {
  flex-wrap: nowrap;
}
.lqeo1ngq {
  flex-shrink: 0;
}
.lqeo1ngu {
  flex-grow: 0;
}
.lqeo1ngy {
  flex-grow: 1;
}
.lqeo1nh2 {
  text-align: left;
}
.lqeo1nh6 {
  text-align: center;
}
.lqeo1nha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .lqeo1n4v {
    display: none;
  }
  .lqeo1n4z {
    display: block;
  }
  .lqeo1n53 {
    display: inline;
  }
  .lqeo1n57 {
    display: inline-block;
  }
  .lqeo1n5b {
    display: flex;
  }
  .lqeo1n5f {
    position: relative;
  }
  .lqeo1n5j {
    position: absolute;
  }
  .lqeo1n5n {
    position: fixed;
  }
  .lqeo1n5r {
    border-radius: 0;
  }
  .lqeo1n5v {
    border-radius: 9999px;
  }
  .lqeo1n5z {
    border-radius: var(--lqh963b);
  }
  .lqeo1n63 {
    border-radius: var(--lqh963c);
  }
  .lqeo1n67 {
    border-radius: var(--lqh963d);
  }
  .lqeo1n6b {
    border-radius: var(--lqh963e);
  }
  .lqeo1n6f {
    padding-top: var(--lqh9630);
  }
  .lqeo1n6j {
    padding-top: var(--lqh9631);
  }
  .lqeo1n6n {
    padding-top: var(--lqh9632);
  }
  .lqeo1n6r {
    padding-top: var(--lqh9633);
  }
  .lqeo1n6v {
    padding-top: var(--lqh9634);
  }
  .lqeo1n6z {
    padding-top: var(--lqh9635);
  }
  .lqeo1n73 {
    padding-top: var(--lqh9636);
  }
  .lqeo1n77 {
    padding-top: var(--lqh9637);
  }
  .lqeo1n7b {
    padding-top: var(--lqh9638);
  }
  .lqeo1n7f {
    padding-top: 0;
  }
  .lqeo1n7j {
    padding-bottom: var(--lqh9630);
  }
  .lqeo1n7n {
    padding-bottom: var(--lqh9631);
  }
  .lqeo1n7r {
    padding-bottom: var(--lqh9632);
  }
  .lqeo1n7v {
    padding-bottom: var(--lqh9633);
  }
  .lqeo1n7z {
    padding-bottom: var(--lqh9634);
  }
  .lqeo1n83 {
    padding-bottom: var(--lqh9635);
  }
  .lqeo1n87 {
    padding-bottom: var(--lqh9636);
  }
  .lqeo1n8b {
    padding-bottom: var(--lqh9637);
  }
  .lqeo1n8f {
    padding-bottom: var(--lqh9638);
  }
  .lqeo1n8j {
    padding-bottom: 0;
  }
  .lqeo1n8n {
    padding-right: var(--lqh9630);
  }
  .lqeo1n8r {
    padding-right: var(--lqh9631);
  }
  .lqeo1n8v {
    padding-right: var(--lqh9632);
  }
  .lqeo1n8z {
    padding-right: var(--lqh9633);
  }
  .lqeo1n93 {
    padding-right: var(--lqh9634);
  }
  .lqeo1n97 {
    padding-right: var(--lqh9635);
  }
  .lqeo1n9b {
    padding-right: var(--lqh9636);
  }
  .lqeo1n9f {
    padding-right: var(--lqh9637);
  }
  .lqeo1n9j {
    padding-right: var(--lqh9638);
  }
  .lqeo1n9n {
    padding-right: 0;
  }
  .lqeo1n9r {
    padding-left: var(--lqh9630);
  }
  .lqeo1n9v {
    padding-left: var(--lqh9631);
  }
  .lqeo1n9z {
    padding-left: var(--lqh9632);
  }
  .lqeo1na3 {
    padding-left: var(--lqh9633);
  }
  .lqeo1na7 {
    padding-left: var(--lqh9634);
  }
  .lqeo1nab {
    padding-left: var(--lqh9635);
  }
  .lqeo1naf {
    padding-left: var(--lqh9636);
  }
  .lqeo1naj {
    padding-left: var(--lqh9637);
  }
  .lqeo1nan {
    padding-left: var(--lqh9638);
  }
  .lqeo1nar {
    padding-left: 0;
  }
  .lqeo1nav {
    margin-top: var(--lqh9630);
  }
  .lqeo1naz {
    margin-top: var(--lqh9631);
  }
  .lqeo1nb3 {
    margin-top: var(--lqh9632);
  }
  .lqeo1nb7 {
    margin-top: var(--lqh9633);
  }
  .lqeo1nbb {
    margin-top: var(--lqh9634);
  }
  .lqeo1nbf {
    margin-top: var(--lqh9635);
  }
  .lqeo1nbj {
    margin-top: var(--lqh9636);
  }
  .lqeo1nbn {
    margin-top: var(--lqh9637);
  }
  .lqeo1nbr {
    margin-top: var(--lqh9638);
  }
  .lqeo1nbv {
    margin-top: 0;
  }
  .lqeo1nbz {
    margin-bottom: var(--lqh9630);
  }
  .lqeo1nc3 {
    margin-bottom: var(--lqh9631);
  }
  .lqeo1nc7 {
    margin-bottom: var(--lqh9632);
  }
  .lqeo1ncb {
    margin-bottom: var(--lqh9633);
  }
  .lqeo1ncf {
    margin-bottom: var(--lqh9634);
  }
  .lqeo1ncj {
    margin-bottom: var(--lqh9635);
  }
  .lqeo1ncn {
    margin-bottom: var(--lqh9636);
  }
  .lqeo1ncr {
    margin-bottom: var(--lqh9637);
  }
  .lqeo1ncv {
    margin-bottom: var(--lqh9638);
  }
  .lqeo1ncz {
    margin-bottom: 0;
  }
  .lqeo1nd3 {
    margin-right: var(--lqh9630);
  }
  .lqeo1nd7 {
    margin-right: var(--lqh9631);
  }
  .lqeo1ndb {
    margin-right: var(--lqh9632);
  }
  .lqeo1ndf {
    margin-right: var(--lqh9633);
  }
  .lqeo1ndj {
    margin-right: var(--lqh9634);
  }
  .lqeo1ndn {
    margin-right: var(--lqh9635);
  }
  .lqeo1ndr {
    margin-right: var(--lqh9636);
  }
  .lqeo1ndv {
    margin-right: var(--lqh9637);
  }
  .lqeo1ndz {
    margin-right: var(--lqh9638);
  }
  .lqeo1ne3 {
    margin-right: 0;
  }
  .lqeo1ne7 {
    margin-left: var(--lqh9630);
  }
  .lqeo1neb {
    margin-left: var(--lqh9631);
  }
  .lqeo1nef {
    margin-left: var(--lqh9632);
  }
  .lqeo1nej {
    margin-left: var(--lqh9633);
  }
  .lqeo1nen {
    margin-left: var(--lqh9634);
  }
  .lqeo1ner {
    margin-left: var(--lqh9635);
  }
  .lqeo1nev {
    margin-left: var(--lqh9636);
  }
  .lqeo1nez {
    margin-left: var(--lqh9637);
  }
  .lqeo1nf3 {
    margin-left: var(--lqh9638);
  }
  .lqeo1nf7 {
    margin-left: 0;
  }
  .lqeo1nfb {
    align-items: flex-start;
  }
  .lqeo1nff {
    align-items: center;
  }
  .lqeo1nfj {
    align-items: flex-end;
  }
  .lqeo1nfn {
    justify-content: flex-start;
  }
  .lqeo1nfr {
    justify-content: center;
  }
  .lqeo1nfv {
    justify-content: flex-end;
  }
  .lqeo1nfz {
    justify-content: space-between;
  }
  .lqeo1ng3 {
    flex-direction: row;
  }
  .lqeo1ng7 {
    flex-direction: row-reverse;
  }
  .lqeo1ngb {
    flex-direction: column;
  }
  .lqeo1ngf {
    flex-direction: column-reverse;
  }
  .lqeo1ngj {
    flex-wrap: wrap;
  }
  .lqeo1ngn {
    flex-wrap: nowrap;
  }
  .lqeo1ngr {
    flex-shrink: 0;
  }
  .lqeo1ngv {
    flex-grow: 0;
  }
  .lqeo1ngz {
    flex-grow: 1;
  }
  .lqeo1nh3 {
    text-align: left;
  }
  .lqeo1nh7 {
    text-align: center;
  }
  .lqeo1nhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .lqeo1n4w {
    display: none;
  }
  .lqeo1n50 {
    display: block;
  }
  .lqeo1n54 {
    display: inline;
  }
  .lqeo1n58 {
    display: inline-block;
  }
  .lqeo1n5c {
    display: flex;
  }
  .lqeo1n5g {
    position: relative;
  }
  .lqeo1n5k {
    position: absolute;
  }
  .lqeo1n5o {
    position: fixed;
  }
  .lqeo1n5s {
    border-radius: 0;
  }
  .lqeo1n5w {
    border-radius: 9999px;
  }
  .lqeo1n60 {
    border-radius: var(--lqh963b);
  }
  .lqeo1n64 {
    border-radius: var(--lqh963c);
  }
  .lqeo1n68 {
    border-radius: var(--lqh963d);
  }
  .lqeo1n6c {
    border-radius: var(--lqh963e);
  }
  .lqeo1n6g {
    padding-top: var(--lqh9630);
  }
  .lqeo1n6k {
    padding-top: var(--lqh9631);
  }
  .lqeo1n6o {
    padding-top: var(--lqh9632);
  }
  .lqeo1n6s {
    padding-top: var(--lqh9633);
  }
  .lqeo1n6w {
    padding-top: var(--lqh9634);
  }
  .lqeo1n70 {
    padding-top: var(--lqh9635);
  }
  .lqeo1n74 {
    padding-top: var(--lqh9636);
  }
  .lqeo1n78 {
    padding-top: var(--lqh9637);
  }
  .lqeo1n7c {
    padding-top: var(--lqh9638);
  }
  .lqeo1n7g {
    padding-top: 0;
  }
  .lqeo1n7k {
    padding-bottom: var(--lqh9630);
  }
  .lqeo1n7o {
    padding-bottom: var(--lqh9631);
  }
  .lqeo1n7s {
    padding-bottom: var(--lqh9632);
  }
  .lqeo1n7w {
    padding-bottom: var(--lqh9633);
  }
  .lqeo1n80 {
    padding-bottom: var(--lqh9634);
  }
  .lqeo1n84 {
    padding-bottom: var(--lqh9635);
  }
  .lqeo1n88 {
    padding-bottom: var(--lqh9636);
  }
  .lqeo1n8c {
    padding-bottom: var(--lqh9637);
  }
  .lqeo1n8g {
    padding-bottom: var(--lqh9638);
  }
  .lqeo1n8k {
    padding-bottom: 0;
  }
  .lqeo1n8o {
    padding-right: var(--lqh9630);
  }
  .lqeo1n8s {
    padding-right: var(--lqh9631);
  }
  .lqeo1n8w {
    padding-right: var(--lqh9632);
  }
  .lqeo1n90 {
    padding-right: var(--lqh9633);
  }
  .lqeo1n94 {
    padding-right: var(--lqh9634);
  }
  .lqeo1n98 {
    padding-right: var(--lqh9635);
  }
  .lqeo1n9c {
    padding-right: var(--lqh9636);
  }
  .lqeo1n9g {
    padding-right: var(--lqh9637);
  }
  .lqeo1n9k {
    padding-right: var(--lqh9638);
  }
  .lqeo1n9o {
    padding-right: 0;
  }
  .lqeo1n9s {
    padding-left: var(--lqh9630);
  }
  .lqeo1n9w {
    padding-left: var(--lqh9631);
  }
  .lqeo1na0 {
    padding-left: var(--lqh9632);
  }
  .lqeo1na4 {
    padding-left: var(--lqh9633);
  }
  .lqeo1na8 {
    padding-left: var(--lqh9634);
  }
  .lqeo1nac {
    padding-left: var(--lqh9635);
  }
  .lqeo1nag {
    padding-left: var(--lqh9636);
  }
  .lqeo1nak {
    padding-left: var(--lqh9637);
  }
  .lqeo1nao {
    padding-left: var(--lqh9638);
  }
  .lqeo1nas {
    padding-left: 0;
  }
  .lqeo1naw {
    margin-top: var(--lqh9630);
  }
  .lqeo1nb0 {
    margin-top: var(--lqh9631);
  }
  .lqeo1nb4 {
    margin-top: var(--lqh9632);
  }
  .lqeo1nb8 {
    margin-top: var(--lqh9633);
  }
  .lqeo1nbc {
    margin-top: var(--lqh9634);
  }
  .lqeo1nbg {
    margin-top: var(--lqh9635);
  }
  .lqeo1nbk {
    margin-top: var(--lqh9636);
  }
  .lqeo1nbo {
    margin-top: var(--lqh9637);
  }
  .lqeo1nbs {
    margin-top: var(--lqh9638);
  }
  .lqeo1nbw {
    margin-top: 0;
  }
  .lqeo1nc0 {
    margin-bottom: var(--lqh9630);
  }
  .lqeo1nc4 {
    margin-bottom: var(--lqh9631);
  }
  .lqeo1nc8 {
    margin-bottom: var(--lqh9632);
  }
  .lqeo1ncc {
    margin-bottom: var(--lqh9633);
  }
  .lqeo1ncg {
    margin-bottom: var(--lqh9634);
  }
  .lqeo1nck {
    margin-bottom: var(--lqh9635);
  }
  .lqeo1nco {
    margin-bottom: var(--lqh9636);
  }
  .lqeo1ncs {
    margin-bottom: var(--lqh9637);
  }
  .lqeo1ncw {
    margin-bottom: var(--lqh9638);
  }
  .lqeo1nd0 {
    margin-bottom: 0;
  }
  .lqeo1nd4 {
    margin-right: var(--lqh9630);
  }
  .lqeo1nd8 {
    margin-right: var(--lqh9631);
  }
  .lqeo1ndc {
    margin-right: var(--lqh9632);
  }
  .lqeo1ndg {
    margin-right: var(--lqh9633);
  }
  .lqeo1ndk {
    margin-right: var(--lqh9634);
  }
  .lqeo1ndo {
    margin-right: var(--lqh9635);
  }
  .lqeo1nds {
    margin-right: var(--lqh9636);
  }
  .lqeo1ndw {
    margin-right: var(--lqh9637);
  }
  .lqeo1ne0 {
    margin-right: var(--lqh9638);
  }
  .lqeo1ne4 {
    margin-right: 0;
  }
  .lqeo1ne8 {
    margin-left: var(--lqh9630);
  }
  .lqeo1nec {
    margin-left: var(--lqh9631);
  }
  .lqeo1neg {
    margin-left: var(--lqh9632);
  }
  .lqeo1nek {
    margin-left: var(--lqh9633);
  }
  .lqeo1neo {
    margin-left: var(--lqh9634);
  }
  .lqeo1nes {
    margin-left: var(--lqh9635);
  }
  .lqeo1new {
    margin-left: var(--lqh9636);
  }
  .lqeo1nf0 {
    margin-left: var(--lqh9637);
  }
  .lqeo1nf4 {
    margin-left: var(--lqh9638);
  }
  .lqeo1nf8 {
    margin-left: 0;
  }
  .lqeo1nfc {
    align-items: flex-start;
  }
  .lqeo1nfg {
    align-items: center;
  }
  .lqeo1nfk {
    align-items: flex-end;
  }
  .lqeo1nfo {
    justify-content: flex-start;
  }
  .lqeo1nfs {
    justify-content: center;
  }
  .lqeo1nfw {
    justify-content: flex-end;
  }
  .lqeo1ng0 {
    justify-content: space-between;
  }
  .lqeo1ng4 {
    flex-direction: row;
  }
  .lqeo1ng8 {
    flex-direction: row-reverse;
  }
  .lqeo1ngc {
    flex-direction: column;
  }
  .lqeo1ngg {
    flex-direction: column-reverse;
  }
  .lqeo1ngk {
    flex-wrap: wrap;
  }
  .lqeo1ngo {
    flex-wrap: nowrap;
  }
  .lqeo1ngs {
    flex-shrink: 0;
  }
  .lqeo1ngw {
    flex-grow: 0;
  }
  .lqeo1nh0 {
    flex-grow: 1;
  }
  .lqeo1nh4 {
    text-align: left;
  }
  .lqeo1nh8 {
    text-align: center;
  }
  .lqeo1nhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .lqeo1n4x {
    display: none;
  }
  .lqeo1n51 {
    display: block;
  }
  .lqeo1n55 {
    display: inline;
  }
  .lqeo1n59 {
    display: inline-block;
  }
  .lqeo1n5d {
    display: flex;
  }
  .lqeo1n5h {
    position: relative;
  }
  .lqeo1n5l {
    position: absolute;
  }
  .lqeo1n5p {
    position: fixed;
  }
  .lqeo1n5t {
    border-radius: 0;
  }
  .lqeo1n5x {
    border-radius: 9999px;
  }
  .lqeo1n61 {
    border-radius: var(--lqh963b);
  }
  .lqeo1n65 {
    border-radius: var(--lqh963c);
  }
  .lqeo1n69 {
    border-radius: var(--lqh963d);
  }
  .lqeo1n6d {
    border-radius: var(--lqh963e);
  }
  .lqeo1n6h {
    padding-top: var(--lqh9630);
  }
  .lqeo1n6l {
    padding-top: var(--lqh9631);
  }
  .lqeo1n6p {
    padding-top: var(--lqh9632);
  }
  .lqeo1n6t {
    padding-top: var(--lqh9633);
  }
  .lqeo1n6x {
    padding-top: var(--lqh9634);
  }
  .lqeo1n71 {
    padding-top: var(--lqh9635);
  }
  .lqeo1n75 {
    padding-top: var(--lqh9636);
  }
  .lqeo1n79 {
    padding-top: var(--lqh9637);
  }
  .lqeo1n7d {
    padding-top: var(--lqh9638);
  }
  .lqeo1n7h {
    padding-top: 0;
  }
  .lqeo1n7l {
    padding-bottom: var(--lqh9630);
  }
  .lqeo1n7p {
    padding-bottom: var(--lqh9631);
  }
  .lqeo1n7t {
    padding-bottom: var(--lqh9632);
  }
  .lqeo1n7x {
    padding-bottom: var(--lqh9633);
  }
  .lqeo1n81 {
    padding-bottom: var(--lqh9634);
  }
  .lqeo1n85 {
    padding-bottom: var(--lqh9635);
  }
  .lqeo1n89 {
    padding-bottom: var(--lqh9636);
  }
  .lqeo1n8d {
    padding-bottom: var(--lqh9637);
  }
  .lqeo1n8h {
    padding-bottom: var(--lqh9638);
  }
  .lqeo1n8l {
    padding-bottom: 0;
  }
  .lqeo1n8p {
    padding-right: var(--lqh9630);
  }
  .lqeo1n8t {
    padding-right: var(--lqh9631);
  }
  .lqeo1n8x {
    padding-right: var(--lqh9632);
  }
  .lqeo1n91 {
    padding-right: var(--lqh9633);
  }
  .lqeo1n95 {
    padding-right: var(--lqh9634);
  }
  .lqeo1n99 {
    padding-right: var(--lqh9635);
  }
  .lqeo1n9d {
    padding-right: var(--lqh9636);
  }
  .lqeo1n9h {
    padding-right: var(--lqh9637);
  }
  .lqeo1n9l {
    padding-right: var(--lqh9638);
  }
  .lqeo1n9p {
    padding-right: 0;
  }
  .lqeo1n9t {
    padding-left: var(--lqh9630);
  }
  .lqeo1n9x {
    padding-left: var(--lqh9631);
  }
  .lqeo1na1 {
    padding-left: var(--lqh9632);
  }
  .lqeo1na5 {
    padding-left: var(--lqh9633);
  }
  .lqeo1na9 {
    padding-left: var(--lqh9634);
  }
  .lqeo1nad {
    padding-left: var(--lqh9635);
  }
  .lqeo1nah {
    padding-left: var(--lqh9636);
  }
  .lqeo1nal {
    padding-left: var(--lqh9637);
  }
  .lqeo1nap {
    padding-left: var(--lqh9638);
  }
  .lqeo1nat {
    padding-left: 0;
  }
  .lqeo1nax {
    margin-top: var(--lqh9630);
  }
  .lqeo1nb1 {
    margin-top: var(--lqh9631);
  }
  .lqeo1nb5 {
    margin-top: var(--lqh9632);
  }
  .lqeo1nb9 {
    margin-top: var(--lqh9633);
  }
  .lqeo1nbd {
    margin-top: var(--lqh9634);
  }
  .lqeo1nbh {
    margin-top: var(--lqh9635);
  }
  .lqeo1nbl {
    margin-top: var(--lqh9636);
  }
  .lqeo1nbp {
    margin-top: var(--lqh9637);
  }
  .lqeo1nbt {
    margin-top: var(--lqh9638);
  }
  .lqeo1nbx {
    margin-top: 0;
  }
  .lqeo1nc1 {
    margin-bottom: var(--lqh9630);
  }
  .lqeo1nc5 {
    margin-bottom: var(--lqh9631);
  }
  .lqeo1nc9 {
    margin-bottom: var(--lqh9632);
  }
  .lqeo1ncd {
    margin-bottom: var(--lqh9633);
  }
  .lqeo1nch {
    margin-bottom: var(--lqh9634);
  }
  .lqeo1ncl {
    margin-bottom: var(--lqh9635);
  }
  .lqeo1ncp {
    margin-bottom: var(--lqh9636);
  }
  .lqeo1nct {
    margin-bottom: var(--lqh9637);
  }
  .lqeo1ncx {
    margin-bottom: var(--lqh9638);
  }
  .lqeo1nd1 {
    margin-bottom: 0;
  }
  .lqeo1nd5 {
    margin-right: var(--lqh9630);
  }
  .lqeo1nd9 {
    margin-right: var(--lqh9631);
  }
  .lqeo1ndd {
    margin-right: var(--lqh9632);
  }
  .lqeo1ndh {
    margin-right: var(--lqh9633);
  }
  .lqeo1ndl {
    margin-right: var(--lqh9634);
  }
  .lqeo1ndp {
    margin-right: var(--lqh9635);
  }
  .lqeo1ndt {
    margin-right: var(--lqh9636);
  }
  .lqeo1ndx {
    margin-right: var(--lqh9637);
  }
  .lqeo1ne1 {
    margin-right: var(--lqh9638);
  }
  .lqeo1ne5 {
    margin-right: 0;
  }
  .lqeo1ne9 {
    margin-left: var(--lqh9630);
  }
  .lqeo1ned {
    margin-left: var(--lqh9631);
  }
  .lqeo1neh {
    margin-left: var(--lqh9632);
  }
  .lqeo1nel {
    margin-left: var(--lqh9633);
  }
  .lqeo1nep {
    margin-left: var(--lqh9634);
  }
  .lqeo1net {
    margin-left: var(--lqh9635);
  }
  .lqeo1nex {
    margin-left: var(--lqh9636);
  }
  .lqeo1nf1 {
    margin-left: var(--lqh9637);
  }
  .lqeo1nf5 {
    margin-left: var(--lqh9638);
  }
  .lqeo1nf9 {
    margin-left: 0;
  }
  .lqeo1nfd {
    align-items: flex-start;
  }
  .lqeo1nfh {
    align-items: center;
  }
  .lqeo1nfl {
    align-items: flex-end;
  }
  .lqeo1nfp {
    justify-content: flex-start;
  }
  .lqeo1nft {
    justify-content: center;
  }
  .lqeo1nfx {
    justify-content: flex-end;
  }
  .lqeo1ng1 {
    justify-content: space-between;
  }
  .lqeo1ng5 {
    flex-direction: row;
  }
  .lqeo1ng9 {
    flex-direction: row-reverse;
  }
  .lqeo1ngd {
    flex-direction: column;
  }
  .lqeo1ngh {
    flex-direction: column-reverse;
  }
  .lqeo1ngl {
    flex-wrap: wrap;
  }
  .lqeo1ngp {
    flex-wrap: nowrap;
  }
  .lqeo1ngt {
    flex-shrink: 0;
  }
  .lqeo1ngx {
    flex-grow: 0;
  }
  .lqeo1nh1 {
    flex-grow: 1;
  }
  .lqeo1nh5 {
    text-align: left;
  }
  .lqeo1nh9 {
    text-align: center;
  }
  .lqeo1nhd {
    text-align: right;
  }
}
.m3vcy34 {
  font-size: var(--m3vcy30);
  line-height: var(--m3vcy31);
}
.m3vcy34:before {
  content: "";
  display: table;
  margin-bottom: var(--m3vcy32);
}
.m3vcy34:after {
  content: "";
  display: table;
  margin-top: var(--m3vcy33);
}
.vhiapm0 {
  font-family: var(--lqh9632w);
}
.vhiapm1 {
  font-weight: var(--lqh96346);
}
.vhiapm2 {
  font-weight: var(--lqh96347);
}
.vhiapm3 {
  font-weight: var(--lqh96348);
}
.vhiapm4 {
  --m3vcy30: var(--lqh96332);
  --m3vcy31: var(--lqh96333);
  --m3vcy32: var(--lqh96335);
  --m3vcy33: var(--lqh96336);
}
.vhiapm7 {
  --m3vcy30: var(--lqh9633c);
  --m3vcy31: var(--lqh9633d);
  --m3vcy32: var(--lqh9633f);
  --m3vcy33: var(--lqh9633g);
}
.vhiapma {
  --m3vcy30: var(--lqh9633m);
  --m3vcy31: var(--lqh9633n);
  --m3vcy32: var(--lqh9633p);
  --m3vcy33: var(--lqh9633q);
}
.vhiapmd {
  --m3vcy30: var(--lqh9633w);
  --m3vcy31: var(--lqh9633x);
  --m3vcy32: var(--lqh9633z);
  --m3vcy33: var(--lqh96340);
}
.vhiapmg {
  font-size: var(--lqh96332);
  line-height: var(--lqh96333);
}
.vhiapmh {
  font-size: var(--lqh9633c);
  line-height: var(--lqh9633d);
}
.vhiapmi {
  font-size: var(--lqh9633m);
  line-height: var(--lqh9633n);
}
.vhiapmj {
  font-size: var(--lqh9633w);
  line-height: var(--lqh9633x);
}
.vhiapmk {
  font-weight: var(--lqh9635d);
}
.vhiapml {
  font-weight: var(--lqh9635e);
}
.vhiapmm {
  --m3vcy30: var(--lqh96349);
  --m3vcy31: var(--lqh9634a);
  --m3vcy32: var(--lqh9634c);
  --m3vcy33: var(--lqh9634d);
}
.vhiapmp {
  --m3vcy30: var(--lqh9634j);
  --m3vcy31: var(--lqh9634k);
  --m3vcy32: var(--lqh9634m);
  --m3vcy33: var(--lqh9634n);
}
.vhiapms {
  --m3vcy30: var(--lqh9634t);
  --m3vcy31: var(--lqh9634u);
  --m3vcy32: var(--lqh9634w);
  --m3vcy33: var(--lqh9634x);
}
.vhiapmv {
  --m3vcy30: var(--lqh96353);
  --m3vcy31: var(--lqh96354);
  --m3vcy32: var(--lqh96356);
  --m3vcy33: var(--lqh96357);
}
html:not(.lqeo1nz) .vhiapm18 {
  --vhiapmy: var(--lqh96319);
  --vhiapmz: var(--lqh96317);
  --vhiapm10: var(--lqh9631d);
  --vhiapm11: var(--lqh9631o);
  --vhiapm12: var(--lqh9631m);
  --vhiapm13: var(--lqh96315);
  --vhiapm14: var(--lqh9631b);
  --vhiapm15: var(--lqh9631k);
  --vhiapm16: var(--lqh9631r);
  --vhiapm17: var(--lqh9631f);
}
html:not(.lqeo1nz) .vhiapm19 {
  --vhiapmy: var(--lqh9631a);
  --vhiapmz: var(--lqh96318);
  --vhiapm10: var(--lqh9631e);
  --vhiapm11: var(--lqh9631p);
  --vhiapm12: var(--lqh9631n);
  --vhiapm13: var(--lqh96316);
  --vhiapm14: var(--lqh9631c);
  --vhiapm15: var(--lqh9631l);
  --vhiapm16: var(--lqh9631s);
  --vhiapm17: var(--lqh9631h);
}
html.lqeo1nz .vhiapm1a {
  --vhiapmy: var(--lqh96319);
  --vhiapmz: var(--lqh96317);
  --vhiapm10: var(--lqh9631d);
  --vhiapm11: var(--lqh9631o);
  --vhiapm12: var(--lqh9631m);
  --vhiapm13: var(--lqh96315);
  --vhiapm14: var(--lqh9631b);
  --vhiapm15: var(--lqh9631k);
  --vhiapm16: var(--lqh9631r);
  --vhiapm17: var(--lqh9631f);
}
html.lqeo1nz .vhiapm1b {
  --vhiapmy: var(--lqh9631a);
  --vhiapmz: var(--lqh96318);
  --vhiapm10: var(--lqh9631e);
  --vhiapm11: var(--lqh9631p);
  --vhiapm12: var(--lqh9631n);
  --vhiapm13: var(--lqh96316);
  --vhiapm14: var(--lqh9631c);
  --vhiapm15: var(--lqh9631l);
  --vhiapm16: var(--lqh9631s);
  --vhiapm17: var(--lqh9631h);
}
html:not(.lqeo1nz) .vhiapm1c,
html:not(.lqeo1nz) .vhiapm1d,
html:not(.lqeo1nz) .vhiapm1e,
html:not(.lqeo1nz) .vhiapm1f {
  --vhiapm15: var(--vhiapmy);
}
html:not(.lqeo1nz) .vhiapm1g,
html:not(.lqeo1nz) .vhiapm1h {
  --vhiapm15: var(--vhiapmz);
}
html:not(.lqeo1nz) .vhiapm1i {
  --vhiapm15: var(--vhiapm12);
}
html:not(.lqeo1nz) .vhiapm1j {
  --vhiapm15: var(--vhiapm10);
}
html:not(.lqeo1nz) .vhiapm1k {
  --vhiapm15: var(--vhiapm11);
}
html.lqeo1nz .vhiapm1l,
html.lqeo1nz .vhiapm1m,
html.lqeo1nz .vhiapm1n,
html.lqeo1nz .vhiapm1o {
  --vhiapm15: var(--vhiapmy);
}
html.lqeo1nz .vhiapm1p,
html.lqeo1nz .vhiapm1q {
  --vhiapm15: var(--vhiapmz);
}
html.lqeo1nz .vhiapm1r {
  --vhiapm15: var(--vhiapm12);
}
html.lqeo1nz .vhiapm1s {
  --vhiapm15: var(--vhiapm10);
}
html.lqeo1nz .vhiapm1t {
  --vhiapm15: var(--vhiapm11);
}
.vhiapm1u {
  color: var(--vhiapmy);
}
.vhiapm1v {
  color: var(--vhiapmz);
}
.vhiapm1w {
  color: var(--vhiapm10);
}
.vhiapm1x {
  color: var(--vhiapm11);
}
.vhiapm1y {
  color: var(--vhiapm12);
}
.vhiapm1z {
  color: var(--vhiapm13);
}
.vhiapm20 {
  color: var(--vhiapm14);
}
.vhiapm21 {
  color: var(--vhiapm15);
}
.vhiapm22 {
  color: var(--vhiapm16);
}
.vhiapm23 {
  color: var(--vhiapm17);
}
.vhiapm24 {
  padding-bottom: calc((var(--lqh9639) - var(--lqh96333)) / 2);
  padding-top: calc((var(--lqh9639) - var(--lqh96333)) / 2);
}
.vhiapm25 {
  padding-bottom: calc((var(--lqh9639) - var(--lqh9633d)) / 2);
  padding-top: calc((var(--lqh9639) - var(--lqh9633d)) / 2);
}
.vhiapm26 {
  padding-bottom: calc((var(--lqh9639) - var(--lqh9633n)) / 2);
  padding-top: calc((var(--lqh9639) - var(--lqh9633n)) / 2);
}
.vhiapm27 {
  padding-bottom: calc((var(--lqh9639) - var(--lqh9633x)) / 2);
  padding-top: calc((var(--lqh9639) - var(--lqh9633x)) / 2);
}
@media screen and (min-width: 740px) {
  .vhiapm4 {
    --m3vcy30: var(--lqh96337);
    --m3vcy31: var(--lqh96338);
    --m3vcy32: var(--lqh9633a);
    --m3vcy33: var(--lqh9633b);
  }
  .vhiapm7 {
    --m3vcy30: var(--lqh9633h);
    --m3vcy31: var(--lqh9633i);
    --m3vcy32: var(--lqh9633k);
    --m3vcy33: var(--lqh9633l);
  }
  .vhiapma {
    --m3vcy30: var(--lqh9633r);
    --m3vcy31: var(--lqh9633s);
    --m3vcy32: var(--lqh9633u);
    --m3vcy33: var(--lqh9633v);
  }
  .vhiapmd {
    --m3vcy30: var(--lqh96341);
    --m3vcy31: var(--lqh96342);
    --m3vcy32: var(--lqh96344);
    --m3vcy33: var(--lqh96345);
  }
  .vhiapmg {
    font-size: var(--lqh96337);
    line-height: var(--lqh96338);
  }
  .vhiapmh {
    font-size: var(--lqh9633h);
    line-height: var(--lqh9633i);
  }
  .vhiapmi {
    font-size: var(--lqh9633r);
    line-height: var(--lqh9633s);
  }
  .vhiapmj {
    font-size: var(--lqh96341);
    line-height: var(--lqh96342);
  }
  .vhiapmm {
    --m3vcy30: var(--lqh9634e);
    --m3vcy31: var(--lqh9634f);
    --m3vcy32: var(--lqh9634h);
    --m3vcy33: var(--lqh9634i);
  }
  .vhiapmp {
    --m3vcy30: var(--lqh9634o);
    --m3vcy31: var(--lqh9634p);
    --m3vcy32: var(--lqh9634r);
    --m3vcy33: var(--lqh9634s);
  }
  .vhiapms {
    --m3vcy30: var(--lqh9634y);
    --m3vcy31: var(--lqh9634z);
    --m3vcy32: var(--lqh96351);
    --m3vcy33: var(--lqh96352);
  }
  .vhiapmv {
    --m3vcy30: var(--lqh96358);
    --m3vcy31: var(--lqh96359);
    --m3vcy32: var(--lqh9635b);
    --m3vcy33: var(--lqh9635c);
  }
  .vhiapm24 {
    padding-bottom: calc((var(--lqh9639) - var(--lqh96338)) / 2);
    padding-top: calc((var(--lqh9639) - var(--lqh96338)) / 2);
  }
  .vhiapm25 {
    padding-bottom: calc((var(--lqh9639) - var(--lqh9633i)) / 2);
    padding-top: calc((var(--lqh9639) - var(--lqh9633i)) / 2);
  }
  .vhiapm26 {
    padding-bottom: calc((var(--lqh9639) - var(--lqh9633s)) / 2);
    padding-top: calc((var(--lqh9639) - var(--lqh9633s)) / 2);
  }
  .vhiapm27 {
    padding-bottom: calc((var(--lqh9639) - var(--lqh96342)) / 2);
    padding-top: calc((var(--lqh9639) - var(--lqh96342)) / 2);
  }
}
._1dpuatu0 {
  --lqh9630: 24px;
  --lqh9631: 4px;
  --lqh9632: 8px;
  --lqh9633: 12px;
  --lqh9634: 20px;
  --lqh9635: 32px;
  --lqh9636: 48px;
  --lqh9637: 96px;
  --lqh9638: 120px;
  --lqh9639: 44px;
  --lqh963a: 4px;
  --lqh963b: 2px;
  --lqh963c: 4px;
  --lqh963d: 6px;
  --lqh963e: 10px;
  --lqh963f: #e60278;
  --lqh963g: #f8b1dc;
  --lqh963h: #fdc221;
  --lqh963i: #fee384;
  --lqh963j: #b91e1e;
  --lqh963k: #fb999a;
  --lqh963l: #838fa5;
  --lqh963m: rgba(159, 176, 245, 0.7);
  --lqh963n: #4964e9;
  --lqh963o: #9fb0f5;
  --lqh963p: #1d559d;
  --lqh963q: #98c9f1;
  --lqh963r: #2e3849;
  --lqh963t: #d2d7df;
  --lqh963s: #fff;
  --lqh963u: #12784f;
  --lqh963v: #8bdec5;
  --lqh963w: #512eaa;
  --lqh963x: #c6acf5;
  --lqh963y: 1px;
  --lqh963z: 2px;
  --lqh96310: 3px;
  --lqh96311: 400px;
  --lqh96312: 660px;
  --lqh96313: 940px;
  --lqh96314: 1280px;
  --lqh96315: #e60278;
  --lqh96316: #f8b1dc;
  --lqh96317: #723d02;
  --lqh96318: #fee384;
  --lqh96319: #b91e1e;
  --lqh9631a: #fb999a;
  --lqh9631b: #4964e9;
  --lqh9631c: #9fb0f5;
  --lqh9631d: #1d559d;
  --lqh9631e: #98c9f1;
  --lqh9631f: #4964e9;
  --lqh9631h: #9fb0f5;
  --lqh9631g: #4964e9;
  --lqh9631i: #512eaa;
  --lqh9631j: #c6acf5;
  --lqh9631k: #2e3849;
  --lqh9631l: #fff;
  --lqh9631m: #12784f;
  --lqh9631n: #8bdec5;
  --lqh9631o: #512eaa;
  --lqh9631p: #c6acf5;
  --lqh9631q: #f57c00;
  --lqh9631r: #5a6881;
  --lqh9631s: hsla(0, 0%, 100%, 0.65);
  --lqh9631t: #f7f8fb;
  --lqh9631u: #0e131b;
  --lqh9631v: #0d3880;
  --lqh9631w: #e60278;
  --lqh9631x: #cd026b;
  --lqh9631y: #fd0585;
  --lqh9631z: #feeffa;
  --lqh96320: #fdd7f3;
  --lqh96321: #fde3f6;
  --lqh96322: #fdc221;
  --lqh96323: #fef8de;
  --lqh96324: #b91e1e;
  --lqh96325: #a31a1a;
  --lqh96326: #db1616;
  --lqh96327: #ffe3e2;
  --lqh96328: #fef3f3;
  --lqh96329: #fcdbdb;
  --lqh9632a: #fde7e7;
  --lqh9632b: #4964e9;
  --lqh9632c: #3251e6;
  --lqh9632d: #5975ff;
  --lqh9632e: #f4f6fe;
  --lqh9632f: #dde3fc;
  --lqh9632g: #e8ecfd;
  --lqh9632h: #1d559d;
  --lqh9632i: #e3f2fb;
  --lqh9632j: #2e3849;
  --lqh9632k: #242c39;
  --lqh9632l: #384459;
  --lqh9632m: #eaecf1;
  --lqh9632n: #f7f8fb;
  --lqh9632o: #e6e9f3;
  --lqh9632p: #eff1f7;
  --lqh9632q: #12784f;
  --lqh9632r: #e2f7f1;
  --lqh9632s: #512eaa;
  --lqh9632t: #f1e8fd;
  --lqh9632u: #fff;
  --lqh9632v: #1c2330;
  --lqh9632w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --lqh9632x: 1456;
  --lqh9632y: 1900;
  --lqh9632z: -500;
  --lqh96330: 0;
  --lqh96331: 2048;
  --lqh96332: 12px;
  --lqh96333: 20px;
  --lqh96334: 8.5313px;
  --lqh96335: -0.4642em;
  --lqh96336: -0.4915em;
  --lqh96337: 12px;
  --lqh96338: 20px;
  --lqh96339: 8.5313px;
  --lqh9633a: -0.4642em;
  --lqh9633b: -0.4915em;
  --lqh9633c: 14px;
  --lqh9633d: 20px;
  --lqh9633e: 9.9531px;
  --lqh9633f: -0.3451em;
  --lqh9633g: -0.3725em;
  --lqh9633h: 14px;
  --lqh9633i: 20px;
  --lqh9633j: 9.9531px;
  --lqh9633k: -0.3451em;
  --lqh9633l: -0.3725em;
  --lqh9633m: 16px;
  --lqh9633n: 24px;
  --lqh9633o: 11.375px;
  --lqh9633p: -0.3809em;
  --lqh9633q: -0.4082em;
  --lqh9633r: 16px;
  --lqh9633s: 24px;
  --lqh9633t: 11.375px;
  --lqh9633u: -0.3809em;
  --lqh9633v: -0.4082em;
  --lqh9633w: 18px;
  --lqh9633x: 28px;
  --lqh9633y: 12.7969px;
  --lqh9633z: -0.4086em;
  --lqh96340: -0.436em;
  --lqh96341: 18px;
  --lqh96342: 28px;
  --lqh96343: 12.7969px;
  --lqh96344: -0.4086em;
  --lqh96345: -0.436em;
  --lqh96346: 400;
  --lqh96347: 600;
  --lqh96348: 700;
  --lqh96349: 28px;
  --lqh9634a: 36px;
  --lqh9634b: 19.9063px;
  --lqh9634c: -0.2737em;
  --lqh9634d: -0.3011em;
  --lqh9634e: 42px;
  --lqh9634f: 44px;
  --lqh9634g: 29.8594px;
  --lqh9634h: -0.1547em;
  --lqh9634i: -0.182em;
  --lqh9634j: 21px;
  --lqh9634k: 32px;
  --lqh9634l: 14.9297px;
  --lqh9634m: -0.3928em;
  --lqh9634n: -0.4201em;
  --lqh9634o: 28px;
  --lqh9634p: 36px;
  --lqh9634q: 19.9063px;
  --lqh9634r: -0.2737em;
  --lqh9634s: -0.3011em;
  --lqh9634t: 21px;
  --lqh9634u: 28px;
  --lqh9634v: 14.9297px;
  --lqh9634w: -0.2975em;
  --lqh9634x: -0.3249em;
  --lqh9634y: 21px;
  --lqh9634z: 28px;
  --lqh96350: 14.9297px;
  --lqh96351: -0.2975em;
  --lqh96352: -0.3249em;
  --lqh96353: 18px;
  --lqh96354: 28px;
  --lqh96355: 12.7969px;
  --lqh96356: -0.4086em;
  --lqh96357: -0.436em;
  --lqh96358: 18px;
  --lqh96359: 28px;
  --lqh9635a: 12.7969px;
  --lqh9635b: -0.4086em;
  --lqh9635c: -0.436em;
  --lqh9635d: 400;
  --lqh9635e: 600;
  --lqh9635f: none;
  --lqh9635g: 24px;
  --lqh9635h: 20px;
  --lqh9635i: transform 0.125s ease, opacity 0.125s ease;
  --lqh9635j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --lqh9635k: scale(0.95);
  --lqh9635l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --lqh9635m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --lqh9635n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.z39vhc6 {
  background: var(--z39vhc0);
}
.z39vhc7 {
  background: var(--z39vhc1);
}
.z39vhc8 {
  background: var(--z39vhc2);
}
.z39vhc9 {
  background: var(--z39vhc3);
}
.z39vhca {
  background: var(--z39vhc4);
}
.z39vhcb {
  background: var(--z39vhc5);
}
html:not(.lqeo1nz) .z39vhcc {
  --z39vhc0: var(--lqh963w);
  --z39vhc1: var(--lqh963p);
  --z39vhc2: var(--lqh963u);
  --z39vhc3: var(--lqh963h);
  --z39vhc4: var(--lqh963j);
  --z39vhc5: var(--lqh963n);
}
html:not(.lqeo1nz) .z39vhcd {
  --z39vhc0: var(--lqh963x);
  --z39vhc1: var(--lqh963q);
  --z39vhc2: var(--lqh963v);
  --z39vhc3: var(--lqh963i);
  --z39vhc4: var(--lqh963k);
  --z39vhc5: var(--lqh963o);
}
html.lqeo1nz .z39vhce {
  --z39vhc0: var(--lqh963w);
  --z39vhc1: var(--lqh963p);
  --z39vhc2: var(--lqh963u);
  --z39vhc3: var(--lqh963h);
  --z39vhc4: var(--lqh963j);
  --z39vhc5: var(--lqh963n);
}
html.lqeo1nz .z39vhcf {
  --z39vhc0: var(--lqh963x);
  --z39vhc1: var(--lqh963q);
  --z39vhc2: var(--lqh963v);
  --z39vhc3: var(--lqh963i);
  --z39vhc4: var(--lqh963k);
  --z39vhc5: var(--lqh963o);
}
.z39vhcg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.z39vhch {
  width: var(--lqh963e);
}
.z39vhci {
  width: var(--lqh963a);
}
._1nbqsuj0 {
  margin-bottom: -0.1em;
}
._1nbqsuj2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1nbqsuj0 ._1nbqsuj2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1nbqsuj4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1nbqsuj3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__lqeo1nz,html.sprinkles_darkMode__lqeo1nz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1dpuatu0 typography_lightModeTone_light__vhiapm18 typography_darkModeTone_dark__vhiapm1b">
+        <div class="reset_base__72whvq0 sprinkles_paddingBottom_gutter_mobile__lqeo1n7i sprinkles_paddingTop_gutter_mobile__lqeo1n6e sprinkles_paddingLeft_gutter_mobile__lqeo1n9q sprinkles_paddingRight_gutter_mobile__lqeo1n8m sprinkles_position_relative_mobile__lqeo1n5e typography_lightModeTone_light__vhiapm18 typography_darkModeTone_dark__vhiapm1b sprinkles_background_surface_lightMode__lqeo1n32 sprinkles_background_surfaceDark_darkMode__lqeo1n35">
+          <span class="reset_base__72whvq0 sprinkles_display_block_mobile__lqeo1n4y typography_fontFamily__vhiapm0 typography_fontWeight_regular__vhiapm1 typography_tone_neutral__vhiapm21 capsize_capsizeStyle__m3vcy34 typography_textSize_large__vhiapmd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
